Import of MUIR/SyslogScan-Daemon-SpamDetector-0.42 from CPAN.
gitpan-cpan-distribution: SyslogScan-Daemon-SpamDetector
gitpan-cpan-version:      0.42
gitpan-cpan-path:         MUIR/modules/SyslogScan-Daemon-SpamDetector-0.42.tar.gz
gitpan-cpan-author:       MUIR
gitpan-cpan-maturity:     released

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+
+0.42	2007/01/07
+
+Changed example program for generating log entries for
+SpamSink.pm: will no longer generate an entry for postmaster 
+bounces.
+
 0.41	2007/01/03
 
 Bugfix: delete old spam recevied rows in BlockList.pm
