--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.52	2007/02/22
+
+Document how to turn the blocklist into a regular
+DNS-based RBL.
+
 0.51	2007/01/23
 
 The regular epxression solution for SpamAssassin didn't work.
