--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.53	2007/03/16
+
+Fix example program for generating rbldnsd blocklist.
+
 0.52	2007/02/22
 
 Document how to turn the blocklist into a regular
