--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.55	2007/05/02
+
+It turns out that bogofilter doesn't always know the IP address
+
 0.54	2007/05/01
 
 Added a bogofilter output recognizer.
