--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.56	2008/03/27
+
+Postfix queue identifiers can be more than 11 characters long
+-- regex fixed.
+
 0.55	2007/05/02
 
 It turns out that bogofilter doesn't always know the IP address
